# vibeide_kyle

./: .dockerignore  .gitignore  CLAUDE.md  README.md  build-portable.cmd  package-lock.json  pyproject.toml
agent/: CLAUDE.md  package-lock.json  package.json
agent/skills/: 1688_source_finding.md  bilibili_search_workflow.md  browser_guide.md  data_extract.md  douyin_product_rank.md  espidf_hardboard.md  html_game_generation.md  page_understanding.md  recording_workflow.md  replay_workflow_tooling.md  search_workflow.md  taobao_listing.md
agent/tools/: bili_nav.cmd  bili_nav.ts  bilibili_search.cmd  bilibili_search.mjs  build_package.cmd  build_package.sh  build_platform_search_url.cmd  cdp_navigate.cmd  (+13 more)
config/: agents.yaml  app.yaml  browser.yaml  platforms.yaml
docker/: windows-smoke.Dockerfile
docs/: 12_Docker_Windows_Smoke.md  ARCHITECTURE.md  DEVELOPMENT.md  DEV_PROGRESS.md  GITHUB_SYNC.md  HANDOFF.md  HARDBOARD_CONSTRUCTION.md  INDEX.md  LOG.md  PLAN_2026-06-21_CLAUDE_SESSION_NES_UI.md  REFACTOR_PLAN.md  RUNTIME_EVENTBUS_CONSTRUCTION.md  RUNTIME_TASK_MANAGER_UI_CONSTRUCTION.md  SECURITY.md  WINDOWS_0_1_MIGRATION_CONSTRUCTION.md  WINDOWS_0_1_TEST_REPORT.md
electron/: bili_run.ts  electron-builder.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
runtime/: README.md  mcp-config.json  package-lock.json  package.json  stop_recording.ts  tsconfig.json
scripts/: docker_windows_smoke.sh  normalize.py  reporter.py  start_electron_desktop.cmd  start_electron_desktop.ps1  start_electron_desktop.sh
tests/: test_project.py  test_scaffold.py
(+78 files in other folders)
